--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Package to fast generate Resources in Larapi distribution. Very small, very simple but works.",
   "require": {
     "php": "^7.0",
-    "laravel/framework": "~5.6"
+    "laravel/framework": ">5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
